Use Long.valueOf()